2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Require a hash as second argument.
	Adjust callers.

2001-03-05  Akim Demaille  <akim@epita.fr>

	Always use hashes with &file_contents.

	* automake.in (&handle_texinfo): texibuild.am does not need
	TEXINFODIR.
	texinfos.am wants only TEXICLEANS.
	(&handle_dist, &add_depend2, &handle_clean): Replace $xform with
	%transform.
	* texinfos.am: Adjust.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_programs, &handle_libraries, &handle_tags)
	(&handle_ltlibraries, &handle_emacs_lisp, &handle_python): Adjust.
	(&am_install_var): Forget about `-clean'.
	Transform ?INSTALL?.
	Always output the *.am file.
	* data-clean.am, java-clean.am, libs-clean.am, lisp-clean.am,
	* ltlib-clean.am, progs-clean.am, python-clean.am, tags-clean.am:
	Remove, merged into the corresponding *.am file.
	* data.am, libs.am, ltlib.am, progs.am, python.am: Equip with
	?INSTALL?.

2001-03-05  Pavel Roskin  <proski@gnu.org>

	* Makefile.am (amfiles): Add configure.am. Sort alphabetically.

2001-03-05  Akim Demaille  <akim@epita.fr>

	If OBJEXT and EXEEXT are not set, provide a default value, and use
	them unconditionally.

	* automake.in (&generate_makefile): Provide default values for
	EXEEXT and OBJEXT.
	(&get_object_extension, &finish_languages)
	(&handle_single_transform_list, &handle_programs, &add_depend2)
	(&check_cygnus, &lang_c_finish, am_install_var): Don't bother with
	them, they are defined.
	* compile.am, depend2.am, program.am, progs.am: Likewise.
	* remake-hdr.am: Fix a typo.
	* tests/cxxo.test, tests/fo.test, tests/implicit.test,
	* tests/interp.test, tests/subobj.test, tests/subobj2.test,
	* tests/suffix2.test: Adjust.

2001-03-05  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Map MAINTAINER-MODE to
	@MAINTAINER_MODE_TRUE@ or nothing.
	* configure.am, remake-hdr.am, remake.am, texi-vers.am: Adjust.
	Suggested by Tom.

2001-03-05  Akim Demaille  <akim@epita.fr>
