@@ -1185,14 +1185,14 @@ sub handle_options
 	    {
 		$use_dependencies = 0;
 	    }
-	    elsif (/([0-9]+)\.([0-9]+)([a-z])?/)
+	    elsif (/([0-9]+)\.([0-9]+)([a-z]?)/)
 	    {
 		# Got a version number.
 
 		my ($rmajor, $rminor, $ralpha) = ($1, $2, $3);
 
 		&prog_error ("version is incorrect: $VERSION")
-		    if $VERSION !~ /([0-9]+)\.([0-9]+)([a-z])?/;
+		    if $VERSION !~ /([0-9]+)\.([0-9]+)([a-z]?)/;
 
 		my ($tmajor, $tminor, $talpha) = ($1, $2, $3);
 
@@ -6634,14 +6634,14 @@ sub file_contents ($%)
 		      'MAINTAINER-MODE'
 		      => $seen_maint_mode ? '@MAINTAINER_MODE_TRUE@' : '',
 
-		      'SHAR'        => $options{'dist-shar'},
-		      'BZIP2'       => $options{'dist-bzip2'},
-		      'ZIP'         => $options{'dist-zip'},
-		      'COMPRESS'    => $options{'dist-tarZ'},
+		      'SHAR'        => $options{'dist-shar'} || 0,
+		      'BZIP2'       => $options{'dist-bzip2'} || 0,
+		      'ZIP'         => $options{'dist-zip'} || 0,
+		      'COMPRESS'    => $options{'dist-tarZ'} || 0,
 
 		      'INSTALL-INFO' => !$options{'no-installinfo'},
 		      'INSTALL-MAN'  => !$options{'no-installman'},
-		      'CK-NEWS'      => $options{'check-news'},
+		      'CK-NEWS'      => $options{'check-news'} || 0,
 
 		      'SUBDIRS'      => &variable_defined ('SUBDIRS'),
 		      'CONFIGURE-AC' => $configure_ac,
